# the_web_acp

./: pyproject.toml
web_acp/: .env.example  README.md
web_acp/src/beeai_agents/: agent.py
