[project]
name = "the_web_agent"
version = "0.1.1"
description = "Advanced LangGraph-powered web research agent with comprehensive search, data extraction, and structured information retrieval capabilities via Bright Data's Web MCP integration"
readme = "README.md"
authors = [{ name = "Bright Data LTD." }]
requires-python = ">=3.11,<4.0"
dependencies = [
    "acp-sdk>=0.13.0",
    "pyyaml>=6.0.2",
    "langgraph>=0.6.2",
    "mcp-use>=1.3.7",
    "langchain_google_genai>=2.1.8"
]

